gcc/testsuite/rust/rustc/ui/macros/issue-54441.rs
macro_rules! m {
    () => {
        let // { dg-error "" "" { target *-*-* } }
    };
}

extern "C" {
    m!();
}

fn main() {}

